force-app/main/default/objects/numm__NDF__c/numm__NDF__c.object-meta.xml
<CustomObject>
    <label>Note de frais</label>
    <nameField>
        <displayFormat>NDF-{0000000}</displayFormat>
        <label>Nom de Note de frais</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes de frais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>