force-app/main/default/objects/numm__NDF__c/fields/numm__Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_Debut__c</fullName>
    <label>Date de début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>