force-app/main/default/objects/numm__NDF__c/fields/numm__Date_fin__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_fin__c</fullName>
    <label>Date de fin</label>
    <required>true</required>
    <type>Date</type>
</CustomField>