force-app/main/default/objects/numm__NDF__c/fields/numm__MT_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__MT_TVA__c</fullName>
    <label>Total TVA</label>
    <summarizedField>numm__NDFItem__c.numm__MT_TVA__c</summarizedField>
    <summaryForeignKey>numm__NDFItem__c.numm__NDF__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>