force-app/main/default/objects/numm__NDF__c/fields/numm__NumberNDF__c.field-meta.xml
<CustomField>
    <fullName>numm__NumberNDF__c</fullName>
    <defaultValue>&#39;Automatique&#39;</defaultValue>
    <label>Numéro NDF</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>