force-app/main/default/objects/numm__NDF__c/fields/numm__Tech_IsComptabilise__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_IsComptabilise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_IsComptabilise</label>
    <type>Checkbox</type>
</CustomField>