force-app/main/default/objects/numm__NDF__c/fields/numm__User__c.field-meta.xml
<CustomField>
    <fullName>numm__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>