force-app/main/default/objects/numm__NDF__c/validationRules/numm__DateFinSupDateDeb.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__DateFinSupDateDeb</fullName>
    <active>true</active>
    <errorConditionFormula>numm__Date_Debut__c &gt; numm__Date_fin__c</errorConditionFormula>
    <errorDisplayField>numm__Date_fin__c</errorDisplayField>
    <errorMessage>La date de fin doit être supérieure à la date de début</errorMessage>
</ValidationRule>