force-app/main/default/objects/numm__NDF__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__NumberNDF__c</columns>
    <columns>numm__User__c</columns>
    <columns>numm__Date_Debut__c</columns>
    <columns>numm__Date_fin__c</columns>
    <columns>numm__Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>