force-app/main/default/objects/numm__NDF__c/listViews/numm__En_cours_de_pr_paration.listView-meta.xml
<ListView>
    <fullName>numm__En_cours_de_pr_paration</fullName>
    <columns>numm__NumberNDF__c</columns>
    <columns>numm__User__c</columns>
    <columns>numm__Date_Debut__c</columns>
    <columns>numm__Date_fin__c</columns>
    <columns>numm__MT_TOTAL__c</columns>
    <columns>numm__Statut__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>numm__Statut__c</field>
        <operation>equals</operation>
        <value>En cours de préparation</value>
    </filters>
    <label>En cours de préparation</label>
    <language>fr</language>
</ListView>