force-app/main/default/objects/numm__NDF__c/listViews/numm__Validee.listView-meta.xml
<ListView>
    <fullName>numm__Validee</fullName>
    <columns>NAME</columns>
    <columns>numm__User__c</columns>
    <columns>numm__Date_Debut__c</columns>
    <columns>numm__Date_fin__c</columns>
    <columns>numm__MT_TOTAL__c</columns>
    <columns>numm__Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>numm__Statut__c</field>
        <operation>equals</operation>
        <value>Validée</value>
    </filters>
    <label>Validée</label>
    <language>fr</language>
</ListView>